--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,19 @@
 <h1>Editing Book</h1>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %> errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @book,url: update_book_path(@book.id), method: :patch, local: true do |f| %>
 
-  <p>title</p>
+  <p>Title</p>
   <%= f.text_field:title %>
 
-  <p>body</p>
+  <p>Body</p>
   <%= f.text_area:body %>
 
   <p>
