--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,4 @@
 <h1>Books</h1>
-<% @books.each do |book| %>
 
   <table>
     <thead>
@@ -10,6 +9,7 @@
       </tr>
     </thead>
     <tbody>
+      <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
         <td><%= book.body %></td>
@@ -17,18 +17,27 @@
         <td><%= link_to "Edit", edit_book_path(book.id) %></td>
         <td><%= link_to "Destroy", destroy_book_path(book.id),method: :delete,"data-confirm" => "Are you sure?" %></td>
       </tr>
+      <% end %>
     </tbody>
   </table>
 
-<% end %>
+
 
 <h2>New book</h2>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %> errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <%= form_with model: @book, local: true do |f| %>
 
-  <p>title</p>
+  <p>Title</p>
   <%= f.text_field:title %>
 
-  <p>body</p>
+  <p>Body</p>
   <%= f.text_area:body %>
 
   <p>
