--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
 <h1>ようこそBookersへ！</h1>
-<p>Bookersでは、さまざまな書籍に関するあなたの意見や</p>
-<p>印象を共有し交換することができます</p>
-<p>
-  <a href = "/books">start</a>
+<p class="top">Bookersでは、さまざまな書籍に関するあなたの意見や</p>
+<p class="top">印象を共有し交換することができます</p>
+<p class="top">
+  <%= link_to "start","/books" %>
 </p>
